--- a/page.css
+++ b/page.css
@@ -5,7 +5,7 @@
     }
 
     header {
-      background-color: #c05050;
+      background-color: #4e17f0;
       padding: 20px;
       animation: slideDown 0.8s ease-in-out;
     }
@@ -91,7 +91,7 @@
     .form-container h2 {
       text-align: center;
       margin-bottom: 25px;
-      color: #c05050;
+      color: #4e17f0;
       animation: slideInFromRight 0.6s ease forwards;
     }
 
@@ -130,7 +130,7 @@
     }
 
     .form-group input:focus {
-      box-shadow: 0 0 5px #c05050;
+      box-shadow: 0 0 5px #4e17f0;
       outline: none;
     }
 
@@ -147,7 +147,7 @@
 
     .submit-btn {
       width: 100%;
-      background-color: #c05050;
+      background-color: #4e17f0;
       color: white;
       padding: 12px;
       font-size: 16px;
