--- a/css/page.css
+++ b/css/page.css
@@ -1,7 +1,8 @@
  body {
-      margin: 0;
+      margin: auto;
       font-family: Arial, sans-serif;
       background-color: #f4f4f4;
+      max-width: 1280px;
     }
 
     header {
